--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"author": {
 		"name": "Ayush Kumar Gupta",
 		"email": "ayush.skg@gmail.com",
-		"url": "https://github.com/Ayush0202/"
+		"url": "https://ayushkumargupta.vercel.app/"
 	},
 	"license": "MIT",
 	"private": true,
